--- a/BlissIOSTest/BlissIOSTest/UI/Storyboards/Main.storyboard
+++ b/BlissIOSTest/BlissIOSTest/UI/Storyboards/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17G3025" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x3t-S6-2gB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="17G3025" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x3t-S6-2gB">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +22,20 @@
                     <view key="view" contentMode="scaleToFill" id="ffn-90-aPY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bliss-applications" translatesAutoresizingMaskIntoConstraints="NO" id="wDk-2X-xRl">
+                                <rect key="frame" x="32" y="135" width="311" height="166"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="wDk-2X-xRl" secondAttribute="height" multiplier="15:8" id="qCb-Dr-XC9"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wDk-2X-xRl" firstAttribute="top" secondItem="qVv-6c-gIt" secondAttribute="bottom" constant="115" id="3DD-sV-8Ft"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wDk-2X-xRl" secondAttribute="trailing" constant="16" id="HJq-xH-tZ8"/>
+                            <constraint firstItem="wDk-2X-xRl" firstAttribute="leading" secondItem="ffn-90-aPY" secondAttribute="leadingMargin" constant="16" id="h7A-hC-EQ0"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8zn-lD-s7u" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +43,7 @@
             <point key="canvasLocation" x="148" y="125"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bliss-applications" width="988" height="589"/>
+    </resources>
 </document>
